Closed Bug 825808 Opened 13 years ago Closed 13 years ago

[B2G][Homescreen] Swiping animation only shows last frame

Categories

(Core :: Layout, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21
blocking-b2g tef+
Tracking Status
firefox19 --- wontfix
firefox20 --- wontfix
firefox21 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- fixed

People

(Reporter: kanru, Assigned: ajones)

References

Details

Attachments

(1 file, 2 obsolete files)

Possible regression from bug 780692 As found in bug 822721 comment #30, turning off throttling will make the animation smooth again.
Blocks: 780692
This doesn't happen on b2g18 (not sure about aurora), so it's some difference between those two codebases.
Changeset 116956:955a8b88d796 might be the cause(not yet in b2g18). changeset: 116956:955a8b88d796 user: Anthony Jones <ajones@mozilla.com> date: Sun Dec 23 10:50:04 2012 -0500 summary: Bug 811950 - Fix async scrolling of position:fixed. r=cjones
Assignee: nobody → ajones
Status: NEW → ASSIGNED
Attachment #700844 - Flags: review?
Attachment #700844 - Attachment is obsolete: true
Attachment #700844 - Flags: review?
Comment on attachment 700847 [details] [diff] [review] Fix animations by marking transforms as not fixed v2 Review of attachment 700847 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/ipc/CompositorParent.cpp @@ +817,5 @@ > matrix.ScalePost(c->GetInheritedXScale(), > c->GetInheritedYScale(), > 1); > } > + NS_ASSERTION(!aLayer->GetIsFixedPosition(), "Can't animate fixed layers"); "Can't animate transforms on fixed-position layers" ::: layout/base/FrameLayerBuilder.cpp @@ +2170,5 @@ > ownLayer->SetPostScale(mParameters.mXScale, > mParameters.mYScale); > } > > + ownLayer->SetIsFixedPosition(isFixed && type != TYPE_TRANSFORM); Add a comment indicating why we're doing this (layers can't support transforms and fixed-pos at the same time).
Attachment #700847 - Flags: review?(roc) → review+
Try run for 26e2053b29f7 is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=26e2053b29f7 Results (out of 101 total builds): exception: 1 success: 84 warnings: 4 failure: 12 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/ajones@mozilla.com-26e2053b29f7
Try run for 163a0f4c28bd is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=163a0f4c28bd Results (out of 304 total builds): exception: 1 success: 270 warnings: 25 failure: 8 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/ajones@mozilla.com-163a0f4c28bd
Try run for f857e1dc8808 is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=f857e1dc8808 Results (out of 20 total builds): success: 20 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/ajones@mozilla.com-f857e1dc8808
Was it intentional that this doesn't have any flags for b2g18?
Comment on attachment 701399 [details] [diff] [review] Fix animations by marking transforms as not fixed v3 [Approval Request Comment] Bug caused by (feature/regressing bug #): 811950 User impact if declined: Animations get broken if we allow marking of shadow layers as fixed; blocks 811950 Testing completed: Tested home screen and nzherald.co.nz Risk to taking this patch (and alternatives if risky): Low risk. Transforms are not usually fixed. String or UUID changes made by this patch: None
Attachment #701399 - Flags: approval-mozilla-b2g18?
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
blocking-b2g: --- → tef+
blocked a tef+ bug. See https://bugzilla.mozilla.org/show_bug.cgi?id=811950#c27 for an explanation.
Attachment #701399 - Flags: approval-mozilla-b2g18?
Landed on mozilla-b2g18/gaia master prior to the 1/25 branching to mozilla-b2g18_v1_0_0/v1.0.0, updating status-b2g-v1.0.0 to fixed.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: