Bug 825808 - Fix animations by marking transforms as not fixed. r=roc